added support for multiple projects; css files added (semantic ui); more code refactoring; hot reloading in vuex files now supported;

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
   <head>
     <title>TheFunc</title>
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/buttons-min.css">
+    <link rel="stylesheet" href="ui/styles/semantic.css">
+    <link rel="stylesheet" href="ui/styles/tab.css">
+    <link rel="stylesheet" href="ui/styles/button.css">
+    <link rel="stylesheet" href="ui/styles/input.css">
+    <link rel="stylesheet" href="ui/styles/table.css">
     <script src="node_modules/ace-builds/src-min-noconflict/ace.js"></script>
   </head>
   <body>
