--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
   <head>
     <title>TheFunc</title>
+    <link rel="stylesheet" href="ui/styles/reset.css">
     <link rel="stylesheet" href="ui/styles/semantic.css">
     <link rel="stylesheet" href="ui/styles/tab.css">
     <link rel="stylesheet" href="ui/styles/button.css">
     <link rel="stylesheet" href="ui/styles/input.css">
     <link rel="stylesheet" href="ui/styles/table.css">
     <link rel="stylesheet" href="ui/styles/icon.css">
+    <link rel="stylesheet" href="ui/styles/app.css">
     <script src="node_modules/ace-builds/src-min-noconflict/ace.js"></script>
   </head>
   <body>
