--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <app></app>
-    <script type"text/javascript">
+    <script type="text/javascript">
       let pubsub = require('./pubsub');
     </script>
     <script src="http://localhost:8080/dist/build.js"></script>
