added font-awesome; added directory-tree component, replacing old function navigation component; directory tree is built and then parsing is triggered correctly, however, parsing locks up the screen (will need to use another process); removed node-dir dependency; added file state enum (it's used for project state, so it might need renaming); scanner module updated to navigate directory tree instead of rescanning a given path;

--- a/app/main.html
+++ b/app/main.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>TheFunc</title>
 
+    <link rel="stylesheet" href="static/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="static/styles/reset.css">
     <link rel="stylesheet" href="static/styles/semantic.css">
     <link rel="stylesheet" href="static/styles/tab.css">
